# RP-Robotic-Arm

./: README.md  RP_arm.urdf
pkg_py_roboticArm/: package.xml  setup.cfg  setup.py
pkg_py_roboticArm/pkg_py_roboticArm/: main_serial.py
pkg_rp_arm/: package.xml  setup.cfg  setup.py
pkg_rp_arm/pkg_rp_arm/: script_rp_arm.py
pkg_rp_arm/rviz/: view_urdf.rviz
pkg_rp_arm/urdf/: rp.urdf.xacro
robotArm/: conf.hpp  robotArm.ino
rp_arm_bringup/: CMakeLists.txt  package.xml
rp_arm_bringup/launch/: RP_Arm.launch.py
